# materialsML

./: .gitignore  README.md  graphs.json  pyproject.toml
materialsml/: __init__.py  main.py  periph.py
materialsml/neuralnetwork/: DGCNN.py  __init__.py  cnn.py
tests/: test_module.py
