[tool.poetry]
name = "materialsml"
version = "0.3.1"
description = "A Machine Learning package for materials informatics"
authors = ["andrewrgarcia <garcia.gtr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.0"
stellargraph = "1.2.1"
mp-api = "^0.30.5"
pytest = "^7.2.0"
mpcontribs-client = "^5.0.7"
boto3 = "^1.26.50"
chardet = "^5.1.0"
pyvista = "^0.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
